# personal-kb

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  setup.sh
src/cli/: chat_cmd.py  import_cmd.py  kb_cmd.py  main.py  pipeline.py  search_cmd.py
src/config/: loader.py
src/doc_processing/: __init__.py  chunker.py  cleaner.py  deduplicator.py  loader.py  metadata.py  parsers.py
src/embedding/: cache.py  embedder.py
src/generation/: hallucination.py  llm_adapter.py  prompt_builder.py  providers.py
src/kb_manager/: __init__.py  manager.py  models.py
src/retrieval/: hybrid_retriever.py  query_expander.py  reranker.py  semantic_cache.py
src/source_tracking/: __init__.py  tracker.py
src/vector_store/: __init__.py  bm25_index.py  chroma_store.py
