[project]
name = "personal-kb"
version = "0.1.0"
description = "Personal Knowledge Base RAG System"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3",
    "pyyaml>=6.0",
    "python-dotenv>=1.2",
    "pydantic>=2.0",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "langchain-text-splitters>=0.3",
    "jieba>=0.42",
    "rank-bm25>=0.2",
    "pypdf>=4.0",
    "python-docx>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "markdown-it-py>=3.0",
    "httpx>=0.27",
    "FlagEmbedding>=1.2",
]

[project.scripts]
kb = "src.cli.main:cli"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]